Fix 'Next Unread Message' button

When the next collection with unread messages has been selected we
have to wait until the collection is completely loaded into the model,
otherwise selectNextUnreadMessageInCurrentFolder() does not find the
unread message.

BUG: 260788